[gd_scene load_steps=33 format=3 uid="uid://dydvpncbselka"]

[ext_resource type="Script" path="res://util/menu.gd" id="1_fvcds"]
[ext_resource type="Theme" uid="uid://b45jfhmer1vsa" path="res://assets/theme.tres" id="2_du7n4"]
[ext_resource type="Texture2D" uid="uid://bamd1ofyompfi" path="res://assets/sprites/menu_bg.png" id="2_f1rt6"]
[ext_resource type="Shader" path="res://assets/crt.gdshader" id="3_vrqb0"]
[ext_resource type="Texture2D" uid="uid://yon2eqldod7d" path="res://assets/sprites/tv_startup_spritesheet.png" id="4_sjorx"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_y8beo"]
shader = ExtResource("3_vrqb0")

[sub_resource type="AtlasTexture" id="AtlasTexture_2xosb"]
atlas = ExtResource("4_sjorx")
region = Rect2(672, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_eo6ot"]
atlas = ExtResource("4_sjorx")
region = Rect2(336, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_heppp"]
atlas = ExtResource("4_sjorx")
region = Rect2(0, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_msyj1"]
atlas = ExtResource("4_sjorx")
region = Rect2(672, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwfmd"]
atlas = ExtResource("4_sjorx")
region = Rect2(336, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6quc"]
atlas = ExtResource("4_sjorx")
region = Rect2(0, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_lr0ps"]
atlas = ExtResource("4_sjorx")
region = Rect2(672, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_xbtnn"]
atlas = ExtResource("4_sjorx")
region = Rect2(336, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_ks37o"]
atlas = ExtResource("4_sjorx")
region = Rect2(0, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_kdl2v"]
atlas = ExtResource("4_sjorx")
region = Rect2(1008, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_bl7i5"]
atlas = ExtResource("4_sjorx")
region = Rect2(336, 672, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_loilx"]
atlas = ExtResource("4_sjorx")
region = Rect2(672, 672, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_6g4hf"]
atlas = ExtResource("4_sjorx")
region = Rect2(1008, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_oxvpx"]
atlas = ExtResource("4_sjorx")
region = Rect2(1008, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_xk4po"]
atlas = ExtResource("4_sjorx")
region = Rect2(0, 672, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_no78g"]
atlas = ExtResource("4_sjorx")
region = Rect2(0, 672, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_rvghn"]
atlas = ExtResource("4_sjorx")
region = Rect2(0, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_bc68j"]
atlas = ExtResource("4_sjorx")
region = Rect2(336, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_8yq7k"]
atlas = ExtResource("4_sjorx")
region = Rect2(672, 0, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_gcu0q"]
atlas = ExtResource("4_sjorx")
region = Rect2(0, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_bscm2"]
atlas = ExtResource("4_sjorx")
region = Rect2(336, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_j6adl"]
atlas = ExtResource("4_sjorx")
region = Rect2(672, 224, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_3ifdw"]
atlas = ExtResource("4_sjorx")
region = Rect2(0, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5fjy"]
atlas = ExtResource("4_sjorx")
region = Rect2(336, 448, 336, 224)

[sub_resource type="AtlasTexture" id="AtlasTexture_on8ll"]
atlas = ExtResource("4_sjorx")
region = Rect2(672, 448, 336, 224)

[sub_resource type="SpriteFrames" id="SpriteFrames_41k6e"]
animations = [{
"frames": [{
"duration": 7.5,
"texture": SubResource("AtlasTexture_2xosb")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_eo6ot")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_heppp")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_msyj1")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_bwfmd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6quc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lr0ps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xbtnn")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_ks37o")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_kdl2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl7i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loilx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g4hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl7i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loilx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g4hf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bl7i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_loilx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g4hf")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_oxvpx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xk4po")
}],
"loop": false,
"name": &"transition_in",
"speed": 25.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_no78g")
}, {
"duration": 7.5,
"texture": SubResource("AtlasTexture_rvghn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bc68j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8yq7k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gcu0q")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_bscm2")
}, {
"duration": 1.5,
"texture": SubResource("AtlasTexture_j6adl")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_3ifdw")
}, {
"duration": 2.0,
"texture": SubResource("AtlasTexture_x5fjy")
}, {
"duration": 3.0,
"texture": SubResource("AtlasTexture_on8ll")
}],
"loop": false,
"name": &"transition_out",
"speed": 25.0
}]

[node name="Menu" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_fvcds")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_f1rt6")

[node name="TabContainer" type="TabContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_du7n4")
tabs_visible = false

[node name="TitleScreen" type="MarginContainer" parent="TabContainer"]
layout_mode = 2
theme = ExtResource("2_du7n4")

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/TitleScreen"]
layout_mode = 2
size_flags_vertical = 4

[node name="Title" type="RichTextLabel" parent="TabContainer/TitleScreen/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_du7n4")
bbcode_enabled = true
text = "[center]this is a platformer about [color=0094ff]blue[/color][/center]"
fit_content = true
shortcut_keys_enabled = false

[node name="PlayButton" type="Button" parent="TabContainer/TitleScreen/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_top = NodePath("../QuitButton")
theme = ExtResource("2_du7n4")
button_mask = 0
text = "Play"

[node name="SettingsButton" type="Button" parent="TabContainer/TitleScreen/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_du7n4")
disabled = true
button_mask = 0
text = "Settings"

[node name="QuitButton" type="Button" parent="TabContainer/TitleScreen/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 4
focus_neighbor_bottom = NodePath("../PlayButton")
theme = ExtResource("2_du7n4")
button_mask = 0
text = "Quit"

[node name="VersionLabel" type="Label" parent="TabContainer/TitleScreen"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
theme = ExtResource("2_du7n4")
text = " DEMO v0.1"

[node name="CRTShader" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_y8beo")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Transition" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TransitionSprite" type="AnimatedSprite2D" parent="Transition"]
unique_name_in_owner = true
position = Vector2(168, 112)
sprite_frames = SubResource("SpriteFrames_41k6e")
animation = &"transition_in"
frame = 20
frame_progress = 1.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="pressed" from="TabContainer/TitleScreen/VBoxContainer/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="TabContainer/TitleScreen/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
